# medical-text-model

./: README.md  pyproject.toml  requirements.txt
data/: online_medical_dictionary_2018-08-05.txt  webmd_dictionary_2018-08-05.txt
medtext/data/collectors/: __main__.py  online_medical_dictionary.py  webmd_terms.py
notebooks/: 01 - Text Matching.ipynb
