[tool.poetry]
name = "medtext"
version = "0.1.0"
description = "Project for results geared towards detecting medical text in documents"
authors = ["Mike Wright <mkwright@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.6"
beautifulsoup4 = "^4.6"
scikit-learn = "^0.19.1"
numpy = "^1.15.0"
scipy = "^1.0.0"
click = "^6.7"
tensorflow = "^1.8.0"
tensorflow-tensorboard = "^1.5.1"
jsoncomment = "^0.3.0"
jsonmerge = "^1.5.1"
Cython = "^0.28.1"
dataclasses = "^0.5"
requests = "^2.19"
pandas = "^0.23.4"

[tool.poetry.dev-dependencies]
pytest = "^3.7.1"
pylint = "^1.9.2"
jupyter = "^1.0.0"
jupyterlab = "^0.31.12"
matplotlib = "^2.2.2"
visvis = "^1.11.1"
jupyter_contrib_nbextensions = "^0.5.0"
holoviews = "^1.10.7"
bokeh = "^0.13.0"
cycler = "^0.10.0"
kiwisolver = "^1.0.1"
pyparsing = "^2.2.0"
packaging = "^17.1"
